EXAMPLES/intrinsic.out
"intrinsic.cc", line 2, char 0: syntax error
Undefined:
_CC_main
