EXAMPLES/intrinsic.c
#include <ccc/CC_kernel.h>

# line 1 intrinsic.cc

CC_shinit()
{
	int CC_j,CC_n,CC_ss;
	char *CC_s;

}
